--- a/war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
@@ -180,7 +180,7 @@ body[indigo-dragging-panel] {
 			html.ext-strict body.ext-gecko & {
 
 				&.x-form-trigger {
-					height: 30px!important;
+					height: 24px!important;
 
 				}
 
